--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.efectotequila.android.feedgoal"
     android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="0.9" >
+    android:versionCode="3"
+    android:versionName="0.9.2" >
 
     <supports-screens />
 
@@ -35,6 +35,7 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:debuggable="false"
         android:allowBackup="true"
         android:backupAgent="net.efectotequila.android.feedgoal.storage.PrefsBackupAgentHelper"
         android:icon="@drawable/ic_launcher"
